[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemy/slimeBlue.png" type="Texture" id=1]
[ext_resource path="res://Enemy/slimeBlue_hit.png" type="Texture" id=2]
[ext_resource path="res://Enemy/slimeBlue_move.png" type="Texture" id=3]
[ext_resource path="res://Enemy2.gd" type="Script" id=4]
[ext_resource path="res://Sound&Music/soundsandmusic/sounds/pepSound2.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "crawl",
"speed": 3.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "squash",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.625, 1.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.25, 0.71875 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3.78125, 1.03125 )

[node name="Enemy2" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.19209e-07, -1.19209e-07 )
scale = Vector2( 0.078125, 0.078125 )
frames = SubResource( 1 )
animation = "crawl"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( 0, 2 )
enabled = true
cast_to = Vector2( 0, 4 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="side_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_checker"]
position = Vector2( 0, 2.96875 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Soundsquash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="side_checker" to="." method="_on_side_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
